# SVF

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SVF.cpp
.github/workflows/: build.yml
include/svf/auth/: AuthManager.h  CryptoUtils.h
include/svf/storage/: BTree.h  VirtualDisk.h
include/svf/vfs/: FileSystem.h  Inode.h
src/: main.cpp
src/auth/: AuthManager.cpp  CryptoUtils.cpp
src/fuse/: fuse_wrapper.cpp
src/storage/: BTree.cpp  VirtualDisk.cpp
src/vfs/: FileSystem.cpp  Inode.cpp
tools/: dump_block.ps1
